# implementation_ros_navigation

./: test.ipynb
test/: CMakeLists.txt  package.xml  setup.py
test/config/: DynamicParam.cfg  config.rviz
test/launch/: kappa.launch  test.launch  vfh.launch
test/params/: global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml
test/robot/: turtlebot.yaml
test/scripts/: laser_to_grid_node.py  noisy_odom.py  vfh.py
test/stdr_sim/: costmap_global.yaml  costmap_local.yaml  global_costmap_params.yaml  planner.yaml
vfh/: package.xml
vfh/config/: robots.rviz
vfh/launch/: robot.launch  robots.launch  stdr.launch  vfh.launch
vfh/maps/: circle.yaml  multiple_obstacle.yaml  one_obstacle.yaml
vfh/scripts/: metrics.py  trajectory.py  vfh.py  vfh_ros.py
vfh_local_planner/: CMakeLists.txt  package.xml  vfh_plugin.xml
vfh_local_planner/include/vfh_local_planner/: histogram.h  polar_histogram.h  vfh_local_planner.h  vfh_local_planner_ros.h
vfh_local_planner/src/: vfh_local_planner.cpp  vfh_local_planner_ros.cpp
vfh_ros/: CMakeLists.txt  package.xml
vfh_ros/config/: robots.rviz
vfh_ros/launch/: robot.launch  robots.launch  robots2.launch  stdr.launch  vfh.launch
vfh_ros/maps/: empty_space.yaml  multiple_circle.yaml  second_map.yaml
vfh_ros/robots/: pandora_robot.yaml
vfh_ros/scripts/: laser_to_grid_node.py  metrics.py  trajectory.py  vfh.py  vfh_ros.py
